--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -4,3 +4,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
 }
+.content {
+  height: 1000vh;
+}
