--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -3,7 +3,21 @@ body {
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
-}
-.content {
-  height: 1000vh;
+  #root {
+    background-color: blue;
+    height: var(--app-height);
+    width: 100vw;
+    overflow: hidden;
+    .container-main {
+      display: grid;
+      grid-template-columns: 10rem 1fr;
+      overflow: hidden;
+      height: calc(var(--app-height) - 4rem);
+      .content {
+        background-color: red;
+        overflow-y: auto;
+        padding: 1rem;
+      }
+    }
+  }
 }
