--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -13,6 +13,7 @@ body {
       overflow: hidden;
       height: calc(var(--app-height) - 4rem);
       .content {
+        position: relative;
         background-color: #f0f3f5;
         overflow-y: auto;
         padding: 2rem;
