--- a/ui/src/components/ConfirmPopUp/index.css
+++ b/ui/src/components/ConfirmPopUp/index.css
@@ -14,7 +14,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.1);
   border-radius: 0.25rem;
   z-index: 2;
   display: flex;
