--- a/ui/src/components/OrdersList/index.css
+++ b/ui/src/components/OrdersList/index.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 10px;
+  padding: 0.625rem;
 }
 
 .order-item {
@@ -12,8 +12,9 @@
   grid-template-columns: 1fr 0.25fr 0.5fr 1fr 0.75fr 0.25fr;
   align-items: center;
   column-gap: 0.5rem;
-  padding: 10px;
-  border: 1px solid #ddd;
+  padding: 0.625rem;
+  background-color: #fff;
+  border: 0.063rem solid #ddd;
   border-radius: 0.25rem;
   cursor: pointer;
   h3 {
@@ -32,5 +33,20 @@
     border: 0.125rem solid #dcdcdc;
     border-radius: 100%;
     padding: 0.3rem;
+  }
+}
+.compact {
+  position: relative;
+  grid-template-columns: 0.25fr 0.5fr 2fr 0.25fr;
+  .arrowRight {
+    height: 100%;
+    width: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #cfd8dc;
   }
 }
