--- a/ui/src/components/SelectedOrder/index.css
+++ b/ui/src/components/SelectedOrder/index.css
@@ -1,11 +1,48 @@
 .order-details {
-  width: 60%;
-  padding: 10px;
+  position: relative;
+  color: #2c3c44;
+  align-items: center;
+  column-gap: 0.5rem;
+  background-color: #fff;
+  border: 0.063rem solid #ddd;
+  border-radius: 0.25rem;
+  margin: 0.625rem;
+  .closeIcon {
+    cursor: pointer;
+    position: absolute;
+    top: -1.25rem;
+    right: -1.25rem;
+    height: 2.5rem;
+    width: 2.5rem;
+    background-color: #fff;
+    border-radius: 100%;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+      height: 65%;
+      width: 65%;
+    }
+  }
+  h2 {
+    padding: 1rem;
+  }
   .products-list {
-    margin-top: 20px;
+    margin: 1.5rem 0;
     .product-item {
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
+      padding: 0.5rem;
+      border-bottom: 0.063rem solid #ddd;
+      align-items: center;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1.5fr 1fr 1fr;
+      h5,
+      p {
+        margin: 0;
+      }
+      &:first-child {
+        border-top: 0.063rem solid #ddd;
+      }
     }
   }
 }
