--- a/ui/src/components/ProductsList/index.css
+++ b/ui/src/components/ProductsList/index.css
@@ -5,13 +5,13 @@
     border-bottom: 0.063rem solid #ddd;
     align-items: center;
     display: grid;
-    grid-template-columns: 0.3fr 0.5fr 1fr 1.5fr;
+    grid-template-columns: 2.5rem 5rem 1fr 1.5fr;
     &.full {
       border: 0.063rem solid #ddd;
       background-color: #fff;
       border-radius: 0.25rem;
       margin: 1rem 0;
-      grid-template-columns: 0.3fr 0.5fr 1fr 1.5fr 0.75fr 0.75fr;
+      grid-template-columns: 2.5rem 5rem 1fr 1.5fr 0.75fr 0.75fr;
     }
     h5 {
       margin: 0;
