--- a/ui/src/components/ProductsList/index.css
+++ b/ui/src/components/ProductsList/index.css
@@ -5,7 +5,7 @@
     border-bottom: 0.063rem solid #ddd;
     align-items: center;
     display: grid;
-    grid-template-columns: 2.5rem 5rem 1fr 1.5fr 2.5rem;
+    grid-template-columns: 2.5rem 5rem 1fr 1.5fr;
     &.full {
       border: 0.063rem solid #ddd;
       background-color: #fff;
