--- a/ui/src/components/ConfirmPopUp/index.css
+++ b/ui/src/components/ConfirmPopUp/index.css
@@ -1,14 +1,19 @@
-.overlay {
-  position: absolute;
+.popup {
+  position: relative;
+  z-index: 2;
+}
+
+.popup__overlay {
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #688787bb;
+  background-color: rgba(104, 136, 135, 0.73);
   z-index: 1;
 }
 
-.popup {
+.popup__container {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -19,33 +24,38 @@
   z-index: 2;
   display: flex;
   flex-direction: column;
-  p {
-    padding: 1rem 1.5rem;
-    font-size: 1.25rem;
-    margin: 0;
-  }
-  > div {
-    padding: 1.25rem;
-    display: flex;
-    justify-content: space-around;
-    background-color: #86bd47;
-    button {
-      padding: 0.25rem 1rem;
-      border-radius: 1rem;
-      color: #fff;
-      border: none;
-      background-color: transparent;
-      font-weight: 600;
-      text-transform: uppercase;
-      &:hover {
-        background-color: #fff;
-        color: inherit;
-      }
-      &:last-child {
-        background-color: #fff;
-        color: #e8364f;
-        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-      }
-    }
-  }
+}
+
+.popup__message {
+  padding: 1rem 1.5rem;
+  font-size: 1.25rem;
+  margin: 0;
+}
+
+.popup__actions {
+  padding: 1.25rem;
+  display: flex;
+  justify-content: space-around;
+  background-color: #86bd47;
+}
+
+.popup__button {
+  padding: 0.25rem 1rem;
+  border-radius: 1rem;
+  color: #fff;
+  border: none;
+  background-color: transparent;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.popup__button:hover {
+  background-color: #fff;
+  color: inherit;
+}
+
+.popup__button--cancel {
+  background-color: #fff;
+  color: #e8364f;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
