--- a/ui/src/components/OrdersList/index.css
+++ b/ui/src/components/OrdersList/index.css
@@ -6,7 +6,7 @@
   padding: 0.625rem;
 }
 
-.order-item {
+.orders-list__item {
   color: #546e7a;
   display: grid;
   grid-template-columns: 1fr 0.25fr 0.5fr 1fr 0.75fr 0.25fr;
@@ -16,41 +16,62 @@
   background-color: #fff;
   border: 0.063rem solid #ddd;
   border-radius: 0.25rem;
-
-  h3 {
-    cursor: pointer;
-    margin: 0;
-    font-size: 1.125rem;
-    text-decoration: underline;
-  }
-  span {
-    display: block;
-    &.subtitle {
-      color: #90a4ae;
-      font-size: 1rem;
-    }
-  }
-  .listIcon {
-    border: 0.125rem solid #dcdcdc;
-    border-radius: 100%;
-    padding: 0.3rem;
-  }
-  img {
-    cursor: pointer;
-  }
 }
-.compact {
+
+.orders-list__title {
+  cursor: pointer;
+  margin: 0;
+  font-size: 1.125rem;
+  text-decoration: underline;
+}
+
+.orders-list__list-icon {
+  border: 0.125rem solid #dcdcdc;
+  border-radius: 50%;
+  padding: 0.3rem;
+}
+
+.orders-list__products-info,
+.orders-list__date-info,
+.orders-list__price-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.orders-list__product-count {
+  display: block;
+}
+
+.orders-list__subtitle {
+  color: #90a4ae;
+  font-size: 1rem;
+}
+
+.orders-list__price {
+  display: block;
+}
+
+.orders-list__price--default {
+  color: #546e7a;
+}
+
+.orders-list__arrow {
+  height: 100%;
+  width: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #cfd8dc;
+}
+
+.orders-list__delete-icon {
+  cursor: pointer;
+}
+
+.orders-list__item--compact {
   position: relative;
   grid-template-columns: 0.25fr 0.5fr 2fr 0.25fr;
-  .arrowRight {
-    height: 100%;
-    width: 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: #cfd8dc;
-  }
 }
