--- a/ui/src/components/PageTitle/index.css
+++ b/ui/src/components/PageTitle/index.css
@@ -1,9 +1,17 @@
-.pageTitle {
+.page-title {
   font-size: 1.5rem;
   font-weight: bold;
   margin: 0 0 1.5rem 1rem;
-  img {
-    margin-right: 0.75rem;
-    cursor: pointer;
-  }
+  display: flex;
+  align-items: center;
+}
+
+.page-title__icon {
+  margin-right: 0.75rem;
+  cursor: pointer;
+}
+
+.page-title__text {
+  display: flex;
+  align-items: center;
 }
