--- a/ui/src/components/ProductsList/index.css
+++ b/ui/src/components/ProductsList/index.css
@@ -1,46 +1,76 @@
 .products-list {
   margin: 1.5rem 0;
-  .product-item {
-    padding: 0.5rem 1rem;
-    border-bottom: 0.063rem solid #ddd;
-    align-items: center;
-    display: grid;
-    grid-template-columns: 2.5rem 5rem 1fr 1.5fr;
-    &.full {
-      border: 0.063rem solid #ddd;
-      background-color: #fff;
-      border-radius: 0.25rem;
-      margin: 1rem 0;
-      grid-template-columns: 2.5rem 5rem 1fr 1.5fr 0.75fr 0.75fr 2.5rem;
-    }
-    .deleteIcon {
-      height: 2.5rem;
-      cursor: pointer;
-    }
-    h5 {
-      margin: 0;
-    }
-    .ball {
-      background-color: #cddc39;
-      border-radius: 100%;
-      width: 1rem;
-      height: 1rem;
-    }
-    img {
-      max-width: 3.5rem;
-      max-height: 3.5rem;
-    }
-    .price {
-      span {
-        display: block;
-      }
-    }
-    .subtitle {
-      color: #90a4ae;
-      font-size: 1rem;
-    }
-    &:first-child {
-      border-top: 0.063rem solid #ddd;
-    }
-  }
+}
+
+.products-list__item {
+  padding: 0.5rem 1rem;
+  border-bottom: 0.063rem solid #ddd;
+  display: grid;
+  grid-template-columns: 2.5rem 5rem 1fr 1.5fr;
+  align-items: center;
+}
+
+.products-list__item--full {
+  border: 0.063rem solid #ddd;
+  background-color: #fff;
+  border-radius: 0.25rem;
+  margin: 1rem 0;
+  grid-template-columns: 2.5rem 5rem 1fr 1.5fr 0.75fr 0.75fr 2.5rem;
+}
+
+.products-list__item-ball {
+  background-color: #cddc39;
+  border-radius: 50%;
+  width: 1rem;
+  height: 1rem;
+}
+
+.products-list__item-photo {
+  max-width: 3.5rem;
+  max-height: 3.5rem;
+}
+
+.products-list__item-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.products-list__item-title {
+  margin: 0;
+}
+
+.products-list__item-subtitle {
+  color: #90a4ae;
+  font-size: 1rem;
+}
+
+.products-list__item-dates {
+  display: flex;
+  flex-direction: column;
+}
+
+.products-list__item-price {
+  display: flex;
+  flex-direction: column;
+}
+
+.products-list__item-price-value {
+  display: block;
+}
+
+.products-list__item-price-value--subtitle {
+  color: #90a4ae;
+}
+
+.products-list__item-order {
+  margin: 0;
+}
+
+.products-list__item-delete-icon {
+  height: 2.5rem;
+  cursor: pointer;
+}
+
+.products-list__item:first-child {
+  border-top: 0.063rem solid #ddd;
 }
