--- a/ui/src/components/TopMenu/index.css
+++ b/ui/src/components/TopMenu/index.css
@@ -1,5 +1,66 @@
-.date-time {
+.top-menu {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 3rem 0.5rem 7rem;
+  background-color: #fff;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  width: 100%;
+  justify-content: space-between;
+}
+
+.top-menu__logo {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.top-menu__logo-icon {
+  max-width: 2rem;
+  max-height: 2rem;
+}
+
+.top-menu__logo-text {
+  color: #28a745;
+  font-weight: bold;
+}
+
+.top-menu__info {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.top-menu__date-time {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.top-menu__time-icon {
+  margin-top: 0.5rem;
+  max-width: 2rem;
+  max-height: 2rem;
+}
+
+.top-menu__time {
+  margin-top: 0.5rem;
+}
+
+.top-menu__session-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  text-align: center;
+  color: #fff;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+
+.top-menu__session-info--active {
+  background-color: #28a745;
+}
+
+.top-menu__session-info--inactive {
+  background-color: #6c757d;
 }
